#915 account catagory view created

--- a/src/app/features/account-catagory/account-catagory-view/account-catagory-view.component.html
+++ b/src/app/features/account-catagory/account-catagory-view/account-catagory-view.component.html
@@ -1,3 +1,3 @@
-<p>
-  account-catagory-view works!
-</p>
+<app-data-view [data]='data' [showAdd]=true [showDelete]=true [showUpdate]=true (deleteRecord)="deleteCategory($event)"
+  [showPdfExport]=true [columnsList]='columnBluePrint'>
+</app-data-view>
