#915 account catagory view created

--- a/src/app/features/account-catagory/account-catagory-form/account-catagory-form.component.html
+++ b/src/app/features/account-catagory/account-catagory-form/account-catagory-form.component.html
@@ -1,3 +1,24 @@
-<p>
-  account-catagory-form works!
-</p>
+<!--   <div class="row">
+    <div class="col-12">
+      <label for="accountId">Account ID</label>
+      <div>
+        <input type="text" id="accountId" name="accountId" class="e-input" formControlName="AccountId">
+        <div class="e-error" *ngIf="AccountId.errors && AccountId.touched">
+          <div *ngIf="AccountId.errors['required']">*Account Id is Required</div>
+          <div *ngIf="AccountId.errors['minlength'] || AccountId.errors['maxlength']">*Account ID must be 4
+            chars long</div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-12">
+      <label for="parentAccount"> Parent Account</label>
+      <div>
+        <ejs-dropdownlist id='parentAccount' name="parentAccount" [width]='550' [fields]="accountFields"
+          formControlName="ParentAccount" [dataSource]='accountList'></ejs-dropdownlist>
+        <div class="e-error" *ngIf="ParentAccount.errors && ParentAccount.touched"></div>
+      </div>
+    </div>
+  </div>
+ -->
