side bar for account managment created

--- a/src/app/features/account-catagory/account-catagory-view/account-catagory-view.component.html
+++ b/src/app/features/account-catagory/account-catagory-view/account-catagory-view.component.html
@@ -1,3 +1,3 @@
-<app-data-view [data]='data' [showAdd]=true [showDelete]=true [showUpdate]=true (deleteRecord)="deleteCategory($event)"
+<app-data-view [data]='data' [showAdd]=true [showDelete]=true [showUpdate]=true (deleteRecord)="deleteCatagory($event)"
   [showPdfExport]=true [columnsList]='columnBluePrint'>
 </app-data-view>
