--- a/src/app/shared/form-options/form-options.component.html
+++ b/src/app/shared/form-options/form-options.component.html
@@ -1,4 +1,27 @@
 <div class="form-button-box">
-  <button class="e-success e-large" ejs-button type="submit" [disabled]="submitDisabled">Submit</button>
-  <button class="e-warning e-large" ejs-button [disabled]="cancelDisabled" (click)="cancel()">Cancel</button>
+  <button
+    class="e-success e-large"
+    ejs-button
+    type="submit"
+    [disabled]="submitDisabled"
+  >
+    Submit
+  </button>
+  <button
+    class="e-warning e-large"
+    ejs-button
+    [disabled]="cancelDisabled"
+    (click)="cancel()"
+  >
+    Cancel
+  </button>
+  <button
+    class="e-warning e-large"
+    ejs-button
+    *ngIf="showDelete"
+    [disabled]="cancelDisabled"
+    (click)="cancel()"
+  >
+    Delete
+  </button>
 </div>
