core module created

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,8 +21,17 @@
         isToggle="true"
         (click)="btnClick()"
         content="Open"
-      ></button>
+      ></button
+      >`
     </div>
+    <ejs-toolbar>
+      <e-items>
+        <e-item text="Appdiv"></e-item>
+        <e-item text="Appdiv"></e-item>
+        <e-item text="Appdiv"></e-item>
+        <e-item type="Appdiv"></e-item>
+      </e-items>
+    </ejs-toolbar>
     <div class="title">Main content</div>
     <div class="rows">
       <router-outlet></router-outlet>
