completed account category integration

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
   </div>
 </ejs-sidebar>
 
-<div id="maincontent" class="content">
+<div class="content">
   <div>
     <div id="head">
       <button
@@ -31,8 +31,7 @@
         <e-item type="Appdiv"></e-item>
       </e-items>
     </ejs-toolbar>
-    <div class="title">Main content</div>
-    <div class="rows">
+    <div id="maincontent">
       <router-outlet></router-outlet>
     </div>
   </div>
