--- a/src/app/features/accounts/account-form/account-form.component.html
+++ b/src/app/features/accounts/account-form/account-form.component.html
@@ -86,6 +86,7 @@
                   [width]="550"
                   placeholder="find the parent account"
                   formControlName="ParentAccount"
+                  [fields]="accountFields"
                   [dataSource]="accountList"
                 ></ejs-autocomplete>
                 <div
@@ -108,6 +109,7 @@
                   name="accountCatagory"
                   placeholder="find account catagory"
                   [width]="400"
+                  [fields]="accountFields"
                   formControlName="AccountCatagory"
                   [dataSource]="accountCatagories"
                 ></ejs-autocomplete>
